<resources>
    <string name="app_name">Blood Bank</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="height">Height</string>
    <string name="sex">Sex</string>
    <string name="age">Age</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="blood">Blood Type ID</string>
    <string name="email">Email Address</string>
    <string name="phone">Phone Number</string>
    <string name="signout">Sign Out</string>
    <string name="confirm">Confirm</string>
    <string name="donor">Donor</string>
    <string name="requester">Requester</string>
    <string name="dash">Dashboard</string>
    <string name="upinfo">Upload Info</string>
    <string name="mreq">Make Request</string>
    <string name="vreq">View Request</string>
    <string name="check">Status</string>
    <string name="history">History</string>
    <string name="ask_donate">Are you sure you want to donate?</string>
    <string name="ask_requester">Are you sure you want to make a new request?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="donor_id">Donor ID</string>
    <string name="date_received">Date Received</string>
    <string name="used">Used</string>
    <string name="date_used">Date Used</string>
    <string name="used_by">Used By</string>
    <string name="date_requested">Date Requested</string>
    <string name="accepted">Accpted</string>
    <string name="date_accpted">Date Accpted</string>
    <string name="name">Name</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Blood Bank</string>
    <string name="nav_header_subtitle">We Take Your Blood</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="update">Update Information</string>

    <string name="donate">Donate</string>
    <string name="request_status">Request Status</string>
    <string name="request">Make Request</string>
    <string name="view">View Request</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
