<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false">

    <ImageButton
        android:id="@+id/donor_upinfo_img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="152dp"
        android:layout_marginBottom="7dp"
        app:layout_constraintBottom_toTopOf="@+id/editText2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/uploadinfor" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="162dp"
        android:layout_height="42dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="427dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/update"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donor_upinfo_img" />

    <ImageButton
        android:id="@+id/requester_history"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/view_donate_history" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="135dp"
        android:layout_height="42dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="427dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/history"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/requester_request"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="197dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/make_request" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="137dp"
        android:layout_height="52dp"
        android:layout_marginStart="61dp"
        android:layout_marginBottom="140dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/request"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/requester_status"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="197dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/request_status" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="141dp"
        android:layout_height="45dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="141dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/request_status"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>