<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".reque_dash">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageButton
            android:id="@+id/reque_upinfo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="68dp"
            android:layout_marginTop="152dp"
            android:layout_marginBottom="7dp"
            app:layout_constraintBottom_toTopOf="@+id/editText2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/uploadinfor" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="162dp"
            android:layout_height="42dp"
            android:layout_marginStart="36dp"
            android:layout_marginBottom="427dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/update"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reque_upinfo" />

        <ImageButton
            android:id="@+id/reque_history"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="152dp"
            android:layout_marginEnd="68dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/view_donate_history" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="135dp"
            android:layout_height="42dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/history"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.008" />

        <ImageButton
            android:id="@+id/reque_mreq"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="68dp"
            android:layout_marginBottom="197dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/request_status" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="141dp"
            android:layout_height="45dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="141dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/view"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>